[package]
name = "finance-tracker-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
